Start implementation of Kimetrica model controller into REST Server
