# REST-Server/openapi_server/models/run_results.py
@@ -1,0 +1,124 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class RunResults(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, config=None, status=None, output=None):  # noqa: E501
+        """RunResults - a model defined in OpenAPI
+
+        :param config: The config of this RunResults.  # noqa: E501
+        :type config: ModelConfig
+        :param status: The status of this RunResults.  # noqa: E501
+        :type status: str
+        :param output: The output of this RunResults.  # noqa: E501
+        :type output: str
+        """
+        self.openapi_types = {
+            'config': ModelConfig,
+            'status': str,
+            'output': str
+        }
+
+        self.attribute_map = {
+            'config': 'config',
+            'status': 'status',
+            'output': 'output'
+        }
+
+        self._config = config
+        self._status = status
+        self._output = output
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RunResults':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The RunResults of this RunResults.  # noqa: E501
+        :rtype: RunResults
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def config(self):
+        """Gets the config of this RunResults.
+
+
+        :return: The config of this RunResults.
+        :rtype: ModelConfig
+        """
+        return self._config
+
+    @config.setter
+    def config(self, config):
+        """Sets the config of this RunResults.
+
+
+        :param config: The config of this RunResults.
+        :type config: ModelConfig
+        """
+
+        self._config = config
+
+    @property
+    def status(self):
+        """Gets the status of this RunResults.
+
+
+        :return: The status of this RunResults.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status):
+        """Sets the status of this RunResults.
+
+
+        :param status: The status of this RunResults.
+        :type status: str
+        """
+        allowed_values = ["SUCCESS", "FAIL"]  # noqa: E501
+        if status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `status` ({0}), must be one of {1}"
+                .format(status, allowed_values)
+            )
+
+        self._status = status
+
+    @property
+    def output(self):
+        """Gets the output of this RunResults.
+
+        URI for accessing output (for example, on S3)  # noqa: E501
+
+        :return: The output of this RunResults.
+        :rtype: str
+        """
+        return self._output
+
+    @output.setter
+    def output(self, output):
+        """Sets the output of this RunResults.
+
+        URI for accessing output (for example, on S3)  # noqa: E501
+
+        :param output: The output of this RunResults.
+        :type output: str
+        """
+
+        self._output = output
