# REST-Server/openapi_server/openapi/openapi.yaml
@@ -72,7 +72,7 @@ paths:
       x-openapi-router-controller: openapi_server.controllers.exploration_controller
   /model_config/{ModelName}:
     get:
-      description: Submit a model name and receive model configurations for the given model.
+      description: Submit a model name and receive all configurations for the given model.
       operationId: model_config_model_name_get
       parameters:
       - description: The name of a model.
@@ -92,7 +92,7 @@ paths:
                   $ref: '#/components/schemas/ModelConfig'
                 type: array
           description: SUCCESS
-      summary: Obtain model configurations for a given model.
+      summary: Obtain configurations for a given model.
       tags:
       - exploration
       x-openapi-router-controller: openapi_server.controllers.exploration_controller
@@ -123,8 +123,108 @@ paths:
       tags:
       - exploration
       x-openapi-router-controller: openapi_server.controllers.exploration_controller
+  /run_model:
+    post:
+      description: Submit a configuration to run a specific model. Model is run asynchronously. Results are available through `/run_results` endpoint.
+      operationId: run_model_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ModelConfig'
+        description: Model and configuration parameters
+        required: true
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RunID'
+          description: SUCCESS
+      summary: Run a model for a given a configuration
+      tags:
+      - execution
+      x-openapi-router-controller: openapi_server.controllers.execution_controller
+  /run_status/{RunID}:
+    get:
+      description: Submit a `RunID` and receive the model run status
+      operationId: run_status_run_idget
+      parameters:
+      - description: The `ID` for a given model run.
+        explode: false
+        in: path
+        name: RunID
+        required: true
+        schema:
+          $ref: '#/components/schemas/RunID'
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RunStatus'
+          description: SUCCESS
+      summary: Obtain status for a given model run
+      tags:
+      - execution
+      x-openapi-router-controller: openapi_server.controllers.execution_controller
+  /run_results/{RunID}:
+    get:
+      description: Submit a `RunID` and receive model run results metadata, including whether it succeeded or failed and where to access the result data.
+      operationId: run_results_run_idget
+      parameters:
+      - description: The ID for a given model run.
+        explode: false
+        in: path
+        name: RunID
+        required: true
+        schema:
+          $ref: '#/components/schemas/RunID'
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RunResults'
+          description: SUCCESS
+      summary: Obtain metadata about the results of a given model run
+      tags:
+      - execution
+      x-openapi-router-controller: openapi_server.controllers.execution_controller
+  /list_runs/{ModelName}:
+    get:
+      description: Submit a `ModelName` and receive an array of `RunID`s associated with the given model.
+      operationId: list_runs_model_name_get
+      parameters:
+      - description: A model name
+        explode: false
+        in: path
+        name: ModelName
+        required: true
+        schema:
+          $ref: '#/components/schemas/ModelName'
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/RunID'
+                type: array
+          description: SUCCESS
+      summary: Obtain a list of runs for a given model
+      tags:
+      - execution
+      x-openapi-router-controller: openapi_server.controllers.execution_controller
 components:
   schemas:
+    ModelName:
+      description: A model's name
+      example: DSSAT
+      type: string
     Model:
       description: An object defining high-level metadata about a model
       example:
@@ -185,10 +285,6 @@ components:
         $ref: '#/components/schemas/ModelName'
       type: array
       uniqueItems: true
-    ModelName:
-      description: A model's name
-      example: DSSAT
-      type: string
     ModelIO:
       description: Array of input or output files for the given model.
       items:
@@ -253,9 +349,7 @@ components:
     ModelConfig:
       description: A model configuration file (JSON).
       example:
-        valid: true
         name: DSSAT
-        error: error
         config: '{}'
       properties:
         name:
@@ -264,10 +358,6 @@ components:
           type: string
         config:
           type: object
-        valid:
-          type: boolean
-        error:
-          type: string
       required:
       - config
       - name
@@ -379,3 +469,34 @@ components:
         - term
         - type
         type: object
+    RunID:
+      description: ID associated with a model run. This is the SHA256 hash of the ModelConfig sent to the /run_model endpoint
+      example: 3A3B3E0AE57AD4A7EF658C1F7832774F55E403F01FDF44B68B355EC4587D7A04
+      type: string
+    RunStatus:
+      description: Status information about a model run.
+      enum:
+      - PENDING
+      - FAIL
+      - SUCCESS
+      type: string
+    RunResults:
+      description: Metadata about the results of a given model run.
+      example:
+        output: output
+        config:
+          name: DSSAT
+          config: '{}'
+        status: SUCCESS
+      properties:
+        config:
+          $ref: '#/components/schemas/ModelConfig'
+        status:
+          enum:
+          - SUCCESS
+          - FAIL
+          type: string
+        output:
+          description: URI for accessing output (for example, on S3)
+          type: string
+      type: object
